# bme-prog_targyak

exam/kiszh3/Beugro3/src/: OrderedList.java  Stack_new.java
hw/HomeWorkPorject/External Materials/: links.txt
hw/HomeWorkPorject/res/: data.xml  map.xml
hw/HomeWorkPorject/src/: Ability.java  Character.java  DependencyGraph.java  Entity.java  GameEngine.java  Monster.java  Tile.java  World.java  uml.puml
hw/HomeWorkPorject/src/abilities/: Ability.java  DependencyGraph.java
hw/HomeWorkPorject/src/entities/: Character.java  Entity.java  Monster.java
hw/HomeWorkPorject/src/gui/: GameCanvas.java  GameFrame.java  MenuFrame.java
hw/HomeWorkPorject/src/loader/: AbilityLoader.java  ClassLoader.java  Tile.java  World.java  XmlMapLoader.java
hw/HomeWorkPorject/src/pac/: Ability.java  Character.java  CombatStatusPanel.java  DependencyGraph.java  Entity.java  GameCanvas.java  GameEngine.java  GameFrame.java  MenuFrame.java  Model.java  Monster.java  Tile.java  TwoListSkillPanel.java  World.java  XmlMapLoader.java
hw/HomeWorkPorject/test/: AbilityTest.java  TODO.txt
hw/doc/: document.aux  document.synctex(busy)  document.tex
lab/lab01/1_2_3_feladatok/: commands.txt
lab/lab01/1_2_3_feladatok/sample/calc/: Calculator.java
lab/lab01/1_2_3_feladatok/sample/prog/: Program.java
lab/lab01/7_feladat/: .classpath  .project
lab/lab03/JavaIO/src/: Main.java
lab/lab04/JavaUtil/: log
lab/lab07/Thread/src/: Fifo.java  Producer.java
lab/lab08/SwingAlapok/src/: CaesarFrame.java
lab/lab09/SwingMvc/src/swingmvclab/: Student.java  StudentData.java  StudentFrame.java
prog2/Labs/lab00/: f1.txt  screenshots.docx
prog2/Labs/lab00/files/: auto.cpp  foo.cpp  gy.cpp  main.cpp  main2.cpp  main3.cpp
prog2/Labs/lab01/nagyobb/: fuggvenyeim.cpp  fuggvenyeim.h  nagyobb_main.cpp
prog2/Labs/lab01/test/: test.sln
prog2/Labs/lab01/test/test/: test.cpp  test.vcxproj  test.vcxproj.filters
prog2/Labs/lab02/const_ref/: const_h.cpp  ref_h.cpp
prog2/Labs/lab02/string1/: string1.c
prog2/Labs/lab02/string2_cpp/: string2.cpp
prog2/Labs/lab03/Komplex/: komplex.cpp
prog2/Labs/lab03/Teglalap/: teglalap.cpp
prog2/Labs/lab04/: resistor.cpp  resistor.h  resistor_test2.cpp
prog2/Labs/lab04/lab04/: lab04.sln  lab04.vcxproj  lab04.vcxproj.filters
prog2/Labs/lab05/: string5.cpp  string5.h
prog2/Labs/lab06/: bicikli.h
prog2/Labs/lab07/Alakzatlab/: UpgradeLog.htm  alakzat.h  alakzat_main.cpp  ellipszis.h  haromszog.cpp  haromszog.h  rajztabla.cpp  rajztabla.h
prog2/Labs/lab07_kristof/UString-master-21e4f71c2705fd63bb12f6cd716c5691f510bae9/: ustring.cpp  ustring.h
prog2/Labs/lab07_kristof/lab_07-master-e1964254ddbcc762124fb4cc21509f7f34e9ccff/Alakzatlab/: alakzat.h  ellipszis.h  haromszog.cpp  haromszog.h  rajztabla.cpp  rajztabla.h
prog2/Labs/lab08_kata/: myset.hpp
prog2/Labs/lab09/: CMakeLists.txt
prog2/Labs/lab09/genArray3/: gen_array_iter3.hpp  sablonok.hpp
prog2/Labs/lab09/generikus2/: generikus2_teszt.cpp  gtest_lite.h  sablonok.hpp
prog2/Labs/lab09/generikus2/generikus/: generikus.sln
prog2/Labs/lab09/generikus2/generikus/generikus/: generikus.vcxproj  generikus.vcxproj.filters
prog2/Labs/lab09/generikus2/generikus/generikus/x64/Debug/: generikus.exe.recipe  generikus.ilk  vc143.idb
prog2/Labs/lab09/generikus2/generikus/generikus/x64/Debug/generikus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  generikus.lastbuildstate  link.command.1.tlog  link.read.2.tlog  link.secondary.1.tlog  link.write.1.tlog
prog2/Labs/lab10/: mystack.hpp  vektor.hpp  vektor_test.cpp
prog2/Labs/lab10/lab/: lab.sln  lab.vcxproj  lab.vcxproj.filters
prog3/exam/kiszh3/Beugro3/src/: OrderedList.java
prog3/hw/: TODO.txt
prog3/hw/doc/: document.aux
prog3/lab/lab01/1_2_3_feladatok/: MANIFEST.mf
prog3/lab/lab01/4_feladat/: .project
prog3/lab/lab01/5_6_feladatok/: .project  program.jardesc
prog3/lab/lab04/JavaUtil/: g
prog3/lab/lab06/JUnitLab/: .classpath
prog3/lab/lab07/Thread/src/: Application.java  Consumer.java
prog3/lab/lab08/SwingAlapok/src/: Main.java
szoftech-lab-exam/: lab5-initial-model-hu.gaphor
(+57 files in other folders)
